testing fix for grey bg images on mobile device at home creen

--- a/assets/scss/service.scss
+++ b/assets/scss/service.scss
@@ -126,7 +126,7 @@
           text-align: center;
           padding: 0 54px;
           @media #{$tablet_device} {
-            padding: 0 10px;
+            padding: 10px;
           }
           h4 {
             font-size: 22px;
